--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,32 @@ body {
   color: #e67e22;
   font-weight: 600;
 }
+/************** Feature IN section**************/
+.section-feature {
+  padding: 4.8rem 0 3.2rem 0;
+}
 
+.heading-feature-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-between;
+}
+
+.logos img {
+  height: 3.2rem;
+  filter: brightness(0%);
+  opacity: 50%;
+}
 /************** How it works section**************/
 .step-number {
   font-size: 8.6rem;
