--- a/css/general.css
+++ b/css/general.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -36,6 +40,10 @@ body {
 
 .grid--4--cols {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5--cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid--center--v {
@@ -86,7 +94,7 @@ body {
 }
 
 /**************Button Component**************/
-
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -126,6 +134,21 @@ body {
 .btn--outline:active {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn-form {
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  background-color: #2e1907;
+  color: #fae5d3;
+  border-radius: 9px;
+  align-self: end;
+}
+
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 strong {
